[package]
name = "uhuh"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Library for building interfactive forms and prompts in the terminal"
homepage = "https://github.com/byounghoon-kim/uhuh"
repository = "https://github.com/byounghoon-kim/uhuh"
readme = "README.md"
keywords = ["terminal", "tui", "huh", "uhuh"]
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
