[package]
name = "uhuh"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Library for building interfactive forms and prompts in the terminal"
homepage = "https://github.com/byounghoonkim/uhuh"
repository = "https://github.com/byounghoonkim/uhuh"
readme = "README.md"
keywords = ["terminal", "tui", "huh", "uhuh"]
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin = "1.4.0"
